[package]
name = "tsengtoken-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0.63", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ring = "0.16.20"
hex = "0.4.3"
serde-big-array = "0.4.1"
periodic = "0.1.1"
