[package]
name = "tsengcoin-core"
version = "0.1.0"
edition = "2021"

[features]
miner = ["cuda_builder", "nvvm", "rustc_codegen_nvvm"]

[dependencies]
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0.63", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ring = "0.16.20"
hex = "0.4.3"
serde-big-array = "0.4.1"
periodic = "0.1.1"
cust = "0.3.2"

[build-dependencies.cuda_builder]
version = "0.3.0"
optional = true

[build-dependencies.nvvm]
version = "0.1.1"
optional = true

[build-dependencies.rustc_codegen_nvvm]
version = "0.3.0"
optional = true
